--- a/css/custom.css
+++ b/css/custom.css
@@ -11965,4 +11965,66 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+#cover {
+  background-image: url("/background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* The dropdown container (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Limit the dimensions of the dropdown button */
+.dropdown-btn {
+  background-color: #8fa998;
+  color: white;
+  padding: 12px 16px; /* Adjust padding for better spacing */
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  width: 200px; /* Set the width of the dropdown button */
+  height: 50px; /* Set the height of the dropdown button */
+  text-align: center; /* Center text horizontally */
+  box-sizing: border-box; /* Ensures padding is included in width/height */
+  position: relative;
+}
+
+/* Limit the dimensions of the dropdown content */
+.dropdown-content {
+  display: none;
+  /*position: absolute;
+  top: 100%;              Position it directly below the button 
+  left: 50%;             /* Start from the middle of the button 
+  transform: tranlateX(-50%); /* Move the dropdown left by 50% of its width to center it */
+  background-color: #f9f9f9;
+  min-width: 415px; /* Set the minimum width of the dropdown */
+  max-width: 415px; /* Limit the maximum width */
+  max-height: 300px; /* Limit the maximum height */
+  overflow-y: auto; /* Allow vertical scrolling if content overflows */
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Style the links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  word-wrap: break-word; /* Allow text to wrap within its container */
+  word-break: break-word; /* Break long words to fit the width */
+  white-space: normal; /* Ensure multi-line text wrapping */
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
 }/*# sourceMappingURL=custom.css.map */
