--- a/css/custom.css
+++ b/css/custom.css
@@ -11978,7 +11978,7 @@ textarea.form-control-lg {
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  box-shadow: 20px 8px 16px rgba(209, 56, 56, 0.2);
   z-index: 1;
 }
 
@@ -11988,7 +11988,7 @@ textarea.form-control-lg {
   color: white;
   padding: 12px 16px; /* Adjust padding for better spacing */
   font-size: 16px;
-  border: none;
+  border: 2px white;
   cursor: pointer;
   width: 200px; /* Set the width of the dropdown button */
   height: 50px; /* Set the height of the dropdown button */
@@ -12005,12 +12005,14 @@ textarea.form-control-lg {
   left: 50%;             /* Start from the middle of the button 
   transform: tranlateX(-50%); /* Move the dropdown left by 50% of its width to center it */
   background-color: #f9f9f9;
+  border: 4px black;
   min-width: 415px; /* Set the minimum width of the dropdown */
   max-width: 415px; /* Limit the maximum width */
   max-height: 300px; /* Limit the maximum height */
   overflow-y: auto; /* Allow vertical scrolling if content overflows */
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  text-align: left;
 }
 
 /* Style the links inside the dropdown */
@@ -12018,6 +12020,7 @@ textarea.form-control-lg {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
+  text-align: left;
   display: block;
   word-wrap: break-word; /* Allow text to wrap within its container */
   word-break: break-word; /* Break long words to fit the width */
@@ -12027,4 +12030,10 @@ textarea.form-control-lg {
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
   background-color: #f1f1f1;
+}
+
+/* Featurette divider styles */
+.big-divider {
+  border-top: 50px solid #ccc; /* Set border thickness and color */
+  margin: 50px 0; /* Add top/bottom margin */
 }/*# sourceMappingURL=custom.css.map */
